--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,7 +63,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.facebook.react:react-native:+'
-    implementation 'com.github.henninghall:numberpickerview:v1.1.5'
+    implementation 'com.github.sipsiripawit:numberpickerview:v1.1.5'
     implementation 'org.apache.commons:commons-lang3:3.8'
     implementation group: 'net.time4j', name: 'time4j-android', version: '4.8-2021a'
 }
